# Plutus-Testing

./: README.md
Casino/Proxy/: ChangeLog.md  Proxy.cabal  package.yaml
Casino/Proxy/app/: Main.hs
Casino/Proxy/src/: Helpers.hs  Lib.hs
Casino/TokenShop/: W1.cid  W2.cid  W3.cid  W4.cid  token-shop.cabal  ts.cid
Casino/TokenShop/app/: tokenShop-pab.hs  ts-client.hs
Casino/TokenShop/src/Shop/: OffChain.hs  OnChain.hs  TokenSaleWithClose.hs  TokenShopPAB.hs  Types.hs
Casino/TokenShop/test/: Spec.hs
Casino/TokenShop/test/Spec/: ModelWithClose.hs  TraceWithClose.hs
Casino/casino-frontend/: README.md  package-lock.json  package.json  vue.config.js
Casino/casino-frontend/src/: App.vue  main.js  routes.js
Casino/casino-frontend/src/assets/currency/styles/: style.css
Casino/casino-frontend/src/components/: NavDraw.vue
Casino/casino-frontend/src/views/: Currency.vue  Login.vue
