Cabal-Version:      2.4
Name:               token-shop
Version:            0.1.0.0

library
  hs-source-dirs:      src
  exposed-modules:     Shop.TokenSaleWithClose
                     , Shop.Types
                     , Shop.OnChain
                     , Shop.OffChain
                     , Shop.TokenShopPAB
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , lens
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , QuickCheck
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable ts-pab
  main-is: tokenShop-pab.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , token-shop
                     , plutus-use-cases
                     , text
                     , bytestring

executable ts-client
  main-is:             ts-client.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , bytestring
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pab
                     , plutus-use-cases
                     , token-shop
                     , prettyprinter
                     , req ^>= 3.9.0
                     , text
                     , uuid

test-suite token-shop-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:       Spec.ModelWithClose
                     , Spec.TraceWithClose
  default-language: Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , token-shop
                     , plutus-tx
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , text
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
